# class-constrained-t-SNE

./: .gitignore  README.md
examples/: metric.py  test.ipynb  test_python_version.ipynb
examples/cstsne/: __init__.py  cstsne.cp38-win_amd64.pyd
examples/cstsne_python/: cstsne.py
examples/demo/: demo_data.csv  rf_probs.npy
examples/fashion/: fashion_probs.npy  fashion_train.pickle
src/: CMakeLists.txt  cstsne.h  cstsnebind.cpp
src/hdi/data/: CMakeLists.txt  embedding.cpp  embedding.h  embedding_inl.h  map_mem_eff.h
src/hdi/dimensionality_reduction/: CMakeLists.txt  ctsne.h  ctsne_inl.h  tsne.cpp
src/hdi/utils/: CMakeLists.txt  abstract_log.h  assert_by_exception.h  log_helper_functions.h  math_utils.cpp  math_utils.h  math_utils_inl.h
